Set View Engines

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -4,7 +4,7 @@
 <body>
     <%- include('./partials/nav.ejs')%>
 
-    <div class="blogs content">
+    <div class="create-blog">
         <h2>Create Blog</h2>
         <form action="">
             <label for="title">Blog Title:</label>
