--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
     <div class="site-title">
-        <a href="/"><h3>Home</h3></a>
+        <a href="/"><h2>Blog NodeJS</h3></a>
         <p>A net Node JS</p>
     </div>
     <ul>
