--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,13 +6,13 @@
 
     <div class="create-blog">
         <h2>Create Blog</h2>
-        <form action="">
+        <form action="/blogs" method="POST">
             <label for="title">Blog Title:</label>
-            <input type="text" id="title" required>
+            <input type="text" id="title" name="title" required>
             <label for="snippet">Blog Snippet:</label>
-            <input type="text" id="snippet" required>
+            <input type="text" id="snippet" name="snippet" required>
             <label for="body">Blog Body:</label>
-            <textarea name="" id="body" cols="30" rows="10"></textarea>
+            <textarea name="body" id="body" cols="30" rows="10" required></textarea>
             <button>Submit</button>
         </form>
     </div>
