Express Router & MVC

--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs')%>
+    <%- include('../partials/head.ejs')%>
 <body>
     <% const name = 'mario'%>
-    <%- include('./partials/nav.ejs')%>
+    <%- include('../partials/nav.ejs')%>
 
     <div class="blogs content">
         <%= name %>
@@ -20,6 +20,6 @@
             <h3>Data not exists</h3>
         <% } %>
     </div>
-    <%- include('./partials/footer.ejs')%>
+    <%- include('../partials/footer.ejs')%>
 </body>
 </html>
